fix(expert-hub): wire CTA button to press center and fix vertical stretch

--- a/foundation_cms/static/scss/pages/expert_hub_page.scss
+++ b/foundation_cms/static/scss/pages/expert_hub_page.scss
@@ -400,6 +400,7 @@ body.template-expert-hub-page {
 
     &__btn {
       margin: 0;
+      align-self: center;
     }
   }
 }
